--- a/css/index.css
+++ b/css/index.css
@@ -1,81 +1,49 @@
-
-.logo{
-    display: flex;
-    justify-content: center;
-    margin-top: 20vh;
-    margin-bottom: 30px;
-    color: white;
-    
-}
-
-.logo .container{
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-}
-.logo .container h1{
-    font-size: 50px;
-    margin-top: 20px;
-    font-weight: bold;
-    text-align: center;
-}
 .main {
     display: flex;
     justify-content: center;
+    margin-top: 12vh;
 }
 
-.main .container {
-    display: flex;
-    width: 900px;
-   
-    gap: 40px;
-    background: rgb(43, 43, 43);
-    padding: 100px;
-    border-radius: 10px;
-    box-shadow: 0 0 30px black;
-    
-}
-
-.main .container .image{
-    overflow: hidden;
-}
-
-.main .container img{
-    width: 250px;
-    mix-blend-mode: multiply;
-    margin-left: 30px;
-}
-
-.main .container .form {
-    width: 350px;
-    margin-top: 20px;
-   
-}
-
-.main .container .form i{
-    position: absolute;
-    margin-top: 10px;
-    margin-left: 13px;
-    color: gray;
-}
-
-.main .container .form .input input{
-    padding-left: 50px;
-   height: 50px;
-}
-
-.main .container .input .link {
-    margin-top: 10px;
+.main .title {
     text-align: center;
+    padding: 1px;
+    width: 450px;
+    border-radius: 10px 10px 0px 0px;
+    background-color: #0082a9;
+    color: white;
+    border: solid 1px rgb(202, 202, 202);
+    border-bottom: none;
 }
 
-.main .container .line {
-    padding: 1px;
-    background-color: rgba(255, 0, 0, 0.007);
-    /* For browsers that do not support gradients */
-    background-image: linear-gradient(rgba(255, 0, 0, 0.007), rgb(211, 211, 211), rgba(255, 0, 0, 0.007));
-    height: 350px;
-    margin-top: -70px;
-    margin-bottom: -220px;
-    width: 3px;
+.main .input i {
+    position: absolute;
+    margin-top: 5px;
+    margin-left: 8px;
+    color: gray;
+   
+}
+
+
+.main .input {
+    padding: 20px;
+    background-color: rgba(184, 184, 184, 0.541);
+    border-radius: 0px 0px 10px 10px;
+    border: solid 1px rgb(202, 202, 202);
+    border-top: none;
+    height: 250px;
+}
+
+.main .input input {
+    width: 100%;
+    height: 45px;
+    border: solid 1px rgb(243, 240, 240);
+    border-radius: 10px;
+    padding-left: 30px;
+}
+
+.main .input input:focus {
+    border: solid 1px rgb(170, 170, 170);
+    border-radius: 10px;
+    padding-left: 30px;
+    outline: none;
 }
